# evse-system

./: .env.example  .gitignore  README.md  dbc_script.sh  docker-compose.yaml  ecosystem.config.js  evse_setup.sh
evse-device-service/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  test-mqtt.js  test-service.js
evse-device-service/proto/: dbc.proto  evse.proto
evse-device-service/scripts/: integration-test.js  start-all.sh  stop-all.sh  test-redis.js
evse-device-service/src/: app.module.ts  main.ts
mosquitto/: mosquitto.conf
python-dbc-service/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  run.py  setup.py  test_client.py
python-dbc-service/benchmarks/: benchmark_service.py  high_load_test.py
python-dbc-service/dbc/: charging_station.dbc
python-dbc-service/scripts/: benchmark.py  start.sh  test.sh
python-dbc-service/src/: __init__.py  config.py  main.py  service.py
python-dbc-service/src/core/: __init__.py  models.py  parser.py  processor.py
python-dbc-service/src/interfaces/: __init__.py
python-dbc-service/src/interfaces/grpc/: dbc_pb2.pyi  dbc_service.proto  server.py
python-dbc-service/src/utils/: __init__.py  crc.py  logging.py  metrics.py
python-dbc-service/tests/: conftest.py
python-dbc-service/tests/fixtures/: test_frames.json
python-dbc-service/tests/integration/: test_concurrent_access.py  test_full_pipeline.py  test_grpc.py
python-dbc-service/tests/unit/: test_crc.py  test_models.py  test_parser.py  test_processor.py  test_service.py
(+24 files in other folders)
