[tool.poetry]
name = "dbc-service"
version = "2.0.0"
description = "High-performance CAN frame processing service"
authors = ["DBC Service Team <team@company.com>"]
readme = "README.md"
packages = [{include = "src"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: System :: Hardware :: Hardware Drivers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5"
pydantic-settings = "^2.1"
grpcio = "^1.60"
grpcio-tools = "^1.60"
cantools = "^39.0"
orjson = "^3.9"
structlog = "^23.2"
uvloop = "^0.19"
prometheus-client = "^0.19"
numpy = "^2.3.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.23"
pytest-cov = "^4.1"
black = "^23.12"
ruff = "^0.1"
mypy = "^1.8"
pre-commit = "^3.6"
types-grpcio = "*"

[tool.poetry.scripts]
dbc-service = "run:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "UP", "B", "SIM", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=src --cov-report=html"
